--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,5 +28,6 @@ jobs:
           mkdocs-material[recommended,git,imaging] \
           mkdocs-rss-plugin \
           mkdocs-git-revision-date-localized-plugin \
-          mkdocs-git-committers-plugin-2
+          mkdocs-git-committers-plugin-2 \
+          mkdocs-minify-plugin
       - run: mkdocs gh-deploy --force
