[feat] 搭建基础文档结构

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,5 +29,6 @@ jobs:
           mkdocs-rss-plugin \
           mkdocs-git-revision-date-localized-plugin \
           mkdocs-git-committers-plugin-2 \
-          mkdocs-minify-plugin
+          mkdocs-minify-plugin \
+          mkdocs-glightbox
       - run:  python -m mkdocs gh-deploy --force
