--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -104,6 +104,9 @@ extra_css:
   - assets/stylesheets/fonts.css
   - assets/stylesheets/collapse.css
   - assets/stylesheets/banner.css
+  - assets/stylesheets/keys.css
+  - assets/stylesheets/magiclink.css
+  - assets/stylesheets/progressbar.css
 extra_javascript:
   - assets/javascripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
@@ -210,6 +213,14 @@ markdown_extensions:
       user: MiemieMethod
       repo: bedrock-docs
       normalize_issue_symbols: true
+      labels:
+        commit: '提交'
+        compare: '比较'
+        issue: '议题'
+        pull: '拉取请求'
+        mention: '用户'
+        repository: '仓库'
+        discuss: '讨论'
   - pymdownx.smartsymbols
   - pymdownx.escapeall:
       hardbreak: true
