--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -102,11 +102,12 @@ extra:
       link: https://github.com/MiemieMethod/bedrock-docs
 extra_css:
   - assets/stylesheets/fonts.css
-  - assets/stylesheets/collapse.css
+  - assets/stylesheets/code.css
   - assets/stylesheets/banner.css
   - assets/stylesheets/keys.css
   - assets/stylesheets/magiclink.css
   - assets/stylesheets/progressbar.css
+  - assets/stylesheets/admonition.css
 extra_javascript:
   - assets/javascripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
