[feat] 增加可排序表格

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -118,8 +118,8 @@ extra_javascript:
   - https://polyfill.io/v3/polyfill.min.js?features=es6
   - https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js
   - https://unpkg.com/mermaid@8.8.4/dist/mermaid.min.js
-  - assets/javascripts/tablesort.js
-  - https://unpkg.com/tablesort@5.3.0/dist/tablesort.min.js
+  # - assets/javascripts/tablesort.js
+  # - https://unpkg.com/tablesort@5.3.0/dist/tablesort.min.js
 
 # Plugins
 plugins:
