[feat] 修复abbr中文问题

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -65,6 +65,7 @@ theme:
 hooks:
   - overrides/hooks/shortcodes.py
   - overrides/hooks/wikilink.py
+  - overrides/hooks/abbr.py
 
 # Additional configuration
 extra:
