--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -115,6 +115,7 @@ extra_css:
   - assets/stylesheets/progressbar.css
   - assets/stylesheets/admonition.css
   - assets/stylesheets/badge.css
+  - assets/stylesheets/tabbed.css
 extra_javascript:
   - assets/javascripts/mathjax.js
   - https://polyfill.io/v3/polyfill.min.js?features=es6
